--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,4 @@ jobs:
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        user: ${{ secrets.PYPI_USER_NAME }}
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        attestations: true  # Enable Trusted Publisher (this will be used with no explicit token)
