--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,26 +8,18 @@ on:
 
 jobs:
   deploy:
+    name: Upload to PyPI
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.x"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
-
-    - name: Build package
-      run: |
-        python -m build
-
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        attestations: true  # Enable Trusted Publisher (this will be used with no explicit token)
+    environment: 
+      name: pypi
+      url: https://pypi.org/project/delphivcl/         
+    permissions:
+      id-token: write
+    steps:                       
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: artifacts-*
+          path: dist
+          
+      - name: Publish package to PyPI      
+        uses: pypa/gh-action-pypi-publish@release/v1
