--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,20 +6,32 @@ on:
       - "v*"
   workflow_dispatch:  # Enables manual trigger
 
+permissions:
+  id-token: write  # Allow writing the OIDC token for trusted publishing
+  contents: read  # Optional, used for access to the repository content (checkout)
+
 jobs:
   deploy:
-    name: Upload to PyPI
     runs-on: ubuntu-latest
-    environment: 
-      name: pypi
-      url: https://pypi.org/project/delphivcl/         
-    permissions:
-      id-token: write
-    steps:                       
-      - uses: actions/download-artifact@v4
-        with:
-          pattern: artifacts-*
-          path: dist
-          
-      - name: Publish package to PyPI      
-        uses: pypa/gh-action-pypi-publish@release/v1
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.x"
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build
+
+    - name: Build package
+      run: |
+        python -m build
+
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        attestations: true  # Enable Trusted Publisher (no need for an explicit token)
