--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,10 @@ on:
   push:
     tags:
       - "v*"
-  workflow_dispatch:  # Enables manual trigger
+  workflow_dispatch:
 
 permissions:
-  id-token: write  # Allow writing the OIDC token for trusted publishing
-  contents: read  # Optional, used for access to the repository content (checkout)
+  contents: read
 
 jobs:
   deploy:
@@ -25,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install build twine
 
     - name: Build package
       run: |
@@ -34,4 +33,6 @@ jobs:
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        attestations: true  # Enable Trusted Publisher (no need for an explicit token)
+        # Use the API token stored as a secret to authenticate with PyPI
+        username: ${{ secrets.PYPI_USERNAME }}
+        password: ${{ secrets.PYPI_API_TOKEN }}
