--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ description = "Tailwind CSS package for FastHTML."
 authors = [{ name = "lmbelo", email = "lucas.belo@live.com" }]
 dependencies = ["python-fasthtml>=0.10.1"]
 
+long_description = {file = "README.md"}
+long_description_content_type = "text/markdown"
+
 [project.optional-dependencies]
 flowbite = [
     "fh_flowbite>=0.0.1",
